<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:color="@color/g_dark_blue"
            android:visibility="invisible" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/productsInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_general_information"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border_background"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/edCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border_background"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:hint="@string/category"/>

            <EditText
                android:id="@+id/edDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border_background"
                android:inputType="text"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:hint="@string/product_description_optional" />

            <EditText
                android:id="@+id/edPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border_background"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:hint="@string/price"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/offerPercentage"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border_background"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:hint="@string/offer_percentage_optional"
                android:inputType="numberDecimal"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/productsInfo"
            app:layout_constraintStart_toStartOf="@id/productsInfo"
            app:layout_constraintEnd_toEndOf="@id/productsInfo"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edSizes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/edittext_border_background"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_marginTop="10dp"
                android:hint="@string/sizes_optional_use_between_each_new_size"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <Button
                    android:id="@+id/buttonColorPicker"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:backgroundTint="@color/g_dark_blue"
                    android:text="@string/color"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    app:icon="@drawable/ic_color"
                    app:iconSize="30dp"
                    app:iconGravity="textTop"
                    app:iconPadding="10dp"
                    android:textSize="11sp"
                    android:layout_marginTop="10dp"/>

                <ImageView
                    android:id="@+id/imgSelectedColors"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"/>

                <TextView
                    android:id="@+id/tvSelectedColors"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:layout_marginStart="20dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonImagesPicker"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:backgroundTint="@color/g_dark_blue"
                    android:text="@string/images"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    app:icon="@drawable/ic_camera"
                    app:iconSize="30dp"
                    app:iconGravity="textTop"
                    app:iconPadding="10dp"
                    android:textSize="11sp"
                    android:layout_marginTop="10dp"/>

                <ImageView
                    android:id="@+id/imgSelectedImages"
                    android:layout_width="90dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>